[package]
name = "ace-capture"
version = "0.1.0"
authors = ["Tobias Kronthaler <kronthto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = { version = "0.7" }
etherparse = "0.9.0"
byteorder = "1.3.4"
